@@ -1,5 +1,9 @@
 Changes with Apache 1.3.15
 
+  *) Accomodate an out-of-space condition in the piped logs and the
+     rotatelogs.c code, and no longer churn log processes for this
+     condition.  [Victor J. Orlikowski]
+
   *) Make cgi-bin work as a regular directory when using mod_vhost_alias
      with no VirtualScriptAlias directives. PR#6829 [Tony Finch]
 
